# aya-cross-lingual-probe

./: .gitignore  DATASET_CARD.md  LICENSE  PRODUCTION_DELTA.md  README.md  REPORT.md  app.py  batch_runner.py  build_stimuli.py  concept_alignment.py  failure_classifier.py  modal_config.py  model_loader.py  p1_edge_cases.json  pyproject.toml
data/: concept_probes.json  stimulus_manifest.json
docs/: failure_taxonomy.md
docs/adr/: 001-framework.md  002-model-loading.md  003-stimuli.md  004-commitment-def.md  005-storage.md
results/: alignment_curves.json  commitment_matrix.csv  failure_cases.csv
viz/: __init__.py  alignment_curves.py  annotated_curve.py  heatmap.py
