[project]
name = "aya-cross-lingual-probes"
version = "0.1.0"
description = "Mechanistic interpretability analysis of Tiny Aya cross-lingual concept representations"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4",
    "transformers>=4.45,<5",
    "datasets>=2.18,<3",
    "numpy>=1.26,<2",
    "pandas>=2.2,<3",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "plotly>=5.18,<6",
    "gradio>=4.0,<5",
    "tqdm>=4.66",
    "accelerate>=0.27",
    "modal>=1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
